fix build issue

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "docs:dev": "vitepress dev NoFusionDoc",
-    "docs:build": "vitepress build NoFusionDoc",
-    "docs:preview": "vitepress preview NoFusionDoc"
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   }
 }
