--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
         {
           "type": "header",
           "key": "accept-language",
-          "value": "(?<lang>^en.*)"
+          "value": "^(?!zh).*"
         }
       ],
       "destination": "/en/",
